--- a/hello.html
+++ b/hello.html
@@ -18,11 +18,15 @@
 				<th>Sobrenome</th>
 				<th>Idade</th>
 			</tr>
-			<tr>
+			<tr> 
 				<td>Leandro</td>
 				<td>Lacerda</td>
 				<td>39 anos</td>
-	
+				
+				<td>Mayane</td>
+				<td>Teixeira</td>
+				<td>30 anos</td>
+
 			</tr>
 		</table>
 	</body>
